# mofdscribe

./: .bumpversion.cfg  .cruft.json  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  README.md  Ray_Info.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/PULL_REQUEST_TEMPLATE/: bench.md  pull_request_template.md
.github/workflows/: changelog.yml  release.yml  tests.yml  update_bench.yml
bench_results/: model_description.template.rst
bench_results/ch4dc_id/v0.0.1/: R-RduNoduJg20220810071815.rst  RdedeuDkr20220810072203.json  RdedeuDkr20220810072203.rst  RduNodu2d20220810070448.json  RduNoduJg20220810071815.json  RduNoduJg20220810071815.rst  metrics.csv
bench_results/logKH_CO2_id/: Rdedeqqhf20220808173933.json  Rdedeqqhf20220808173933.rst  RduNodufF20220808164802.json  RduNodufF20220808164802.rst  RduNoduxx20220808165317.json  logKH_CO2_id_plot.html
bench_results/logKH_CO2_id/v0.0.1/: R-RdedemHZA20220809154048.rst  R-RduNoduVk20220809154016.rst  RdedemHZA20220809154048.json  RdedemHZA20220809154048.rst  RduNoduVk20220809154016.json  RduNoduhB20220809154026.json  RduNoduhB20220809154026.rst  logKH_CO2_id_plot_latest.html  metrics.csv
bench_results/logKH_CO2_int/: R-Rlidelimo20220706075604.rst  R-Rmeyadumo20220706075559.rst  Rlidelimo20220706075604.json  Rlidelimo20220706075604.rst  RmeiKdumo20220706075553.json  RmeiKdumo20220706075553.rst  Rmeyadumo20220706075559.json  Rmeyadumo20220706075559.rst
bench_results/logKH_CO2_ood/: R-RdedePpoj20220808205611.rst  RdedePpoj20220808205611.json  RdedePpoj20220808205611.rst  RduNodu-G20220808205451.json  RduNoduIq20220808205526.json
bench_results/logKH_CO2_ood/v0.0.1/: R-RduNoduaC20220809154526.rst  R-RduNoduww20220809154446.rst  R-RduNoduzO20220809154518.rst  RdedeStm-20220809154539.json  RdedeStm-20220809154539.rst  RduNoduaC20220809154526.json  RduNoduaC20220809154526.rst  RduNoduww20220809154446.json  RduNoduzO20220809154518.json  logKH_CO2_ood_plot_latest.html  metrics.csv
bench_results/pbe_bandgap_id/: R-RdedeRZje20220808215916.rst  R-RduNodui_20220808215842.rst  RdedeRZje20220808215916.json  RduNoduQY20220808215439.json  RduNoduQY20220808215439.rst  RduNodui_20220808215842.json  RduNodui_20220808215842.rst
bench_results/pbe_bandgap_id/v0.0.1/: R-RdedeLFjO20220809154725.rst  R-RduNoduxg20220809154632.rst  RdedeLFjO20220809154725.json  RdedeLFjO20220809154725.rst  Rden-CGnK20220817012931.json  Rden-CGnK20220817012931.rst  RduNodu9v20220809154701.json  RduNoduxg20220809154632.json  RduNoduxg20220809154632.rst  metrics.csv  pbe_bandgap_id_plot_latest.html
binder/: postBuild
dev/: 20220415_develop_zeopp_parser.ipynb  20220417_structure_graph.ipynb  20220419_develop_racs_features.ipynb  20220421_moltda.ipynb  20220421_pervect.ipynb
dev_scripts/: README.md  compute_hashes.py  get_dataset_feats.py  get_dataset_feats_parallel.py  submit_hashes_slurm.py  update_bench.py
dev_scripts/dataset_creation/: query_aiida.py  submit_hashes_slurm.py
docs/: Makefile  environment.yml
docs/source/: api.rst  background.rst  cli.rst  conf.py  contributing.rst  dataleakage.rst  datasets.rst  getting_started.rst  index.rst  installation.rst  leaderboard.rst  maintaining.rst  metrics.rst  references.rst  splitters.rst  usage.rst
docs/source/_static/: logKH_CO2_id_plot.html  logKH_CO2_int_plot.html
docs/source/api/: bench.rst  data.rst  featurizers.rst  helpers.rst  metrics.rst  splitters.rst  structures.rst
docs/source/leaderboards/: ch4dc_id.rst  ch4dc_id_plot_latest.html  logKH_CO2_id_plot.html  logKH_CO2_id_plot_latest.html  logKH_CO2_int_plot.html  logKH_CO2_ood_plot.html  logKH_CO2_ood_plot_latest.html  logkHCO2.rst  logkH_CO2_id.rst  logkH_CO2_int.rst  logkH_CO2_ood.rst  pbe_bandgap_id.rst  pbe_bandgap_id_plot.html  pbe_bandgap_id_plot_latest.html
examples/: add_model_to_leaderboard.ipynb  build_model_using_mofdscribe.ipynb  featurize.ipynb  featurize_mof.ipynb  hyperopt_sklearn_bench.ipynb  hyperparameter_optimization_in_bench.ipynb
examples/baselines/: ch4dc_id.ipynb  logKH_CO2_id.ipynb  logKH_CO2_ood.ipynb  pbe_bandgap_id.ipynb
examples/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
examples/catboost_info/learn/: events.out.tfevents
examples/test-deepchem/: Rden-CG5Z20220802114604.json  Rden-CGEA20220802115733.json
src/mofdscribe/: __init__.py  __main__.py  cli.py  constants.py  helpers.py  mof.py  types.py  version.py
src/mofdscribe/bbs/: buildingBlockFeaturizer.py
src/mofdscribe/bench/: __init__.py  bandgap.py  ch4dc.py  df_model.py  dummy_models.py  logkHCO2.py  mofbench.py  pbegap.py
src/mofdscribe/chemistry/: __init__.py  _fragment.py  amd.py  aprdf.py  energygrid.py  (+7 more)
tests/: __init__.py  conftest.py  helpers.py  test_matmineradapter.py  test_mof.py  test_version.py
tests/bench/: test_bench.py  test_df_model.py  test_watermark.py
tests/chemistry/: test_amd.py  test_aprdf.py  test_energygrid.py  test_henry.py  test_henryhoa.py  test_partialchargehistogram.py  test_partialchargestats.py  test_racs.py
tests/datasets/: test_arabg.py  test_arcmof.py  test_bw.py  test_core.py  test_qmof.py  test_structuredataset.py  test_thermal_stability.py
tests/featurizers/: helpers.py  test_aggregators.py  test_base.py  test_utils.py
tests/metrics/: test_adverserial.py  test_regression.py
tests/pore/: test_geometric_properties.py  test_voxelgrid.py
tests/sbu/: test_rdkit_adaptor.py  test_rdkit_converter.py  test_sbu_featurizer.py  test_sbu_matches.py
tests/splitters/: test_splitters.py  test_utils.py
tests/test_files/: 20450N2_ddec.cif  ABACUF.cif  BTC.cif  Fe-MOF-74.cif  HKUST-1-La.cif  HKUST-1-Ni.cif  HKUST-1-linkers.cif  HKUST-1.cif  IRMOF-1.cif  asci_grid_C_co2.grid  floating_check.cif  linker_molecule.json  test_molecule.json  test_molecule_graph.json  triangle_structure.json
tests/topology/: test_atom_centered_ph.py  test_ph_hist.py  test_ph_image.py  test_ph_stats.py  test_ph_vect.py
tests/utils/: test_aggregators.py  test_raspa.py  test_structure_graph.py  test_substructures.py
(+265 files in other folders)
